# git

./: CMakeListDebugger.txt  CMakeLists.txt  README.md
include/: utils.h
include/Codex/: litera.h
include/commands/: file.h  manager.h
include/file/: file.h  pack.h  types.h  utils.h
include/file/pack/: blob.h  commit.h  delta.h  helpers.h  pack.h  tree.h
include/objects/: example.py  helpers.h  initializers.h  objects.h  readers.h  structs.h
include/request/: request.h  utils.h
src/: Server.cpp
src/Codex/: litera.cpp
src/commands/: file.cpp  manager.cpp
src/file/: file.cpp  oldCode.cpp  pack.cpp  representations.txt  testing.py  types.cpp  utils.cpp
src/file/pack/: blob.cpp  commit.cpp  delta.cpp  helpers.cpp  pack.cpp  tree.cpp
src/objects/: helpers.cpp  initializers.cpp  objects.cpp  readers.cpp  structs.cpp
src/request/: request.cpp  utils.cpp
